# analise_indices_constitucionais

./: .gitignore  README.md  app.py  app_edu.py  pyproject.toml  teste_varias_consultas_flex.py  teste_varias_consultas_juntar_df.py
.streamlit/: config.toml
Docs/: Ajustes da Consulta do Indice Constitucional de Educação.docx  Instalação API SIAFERIO.md  associacao_formulas_word_app_edu.md  guia_rapido_instalar_client_flex.md  pipeline_indice_educacao.md  projecao_indice_educacao.md  ~$ustes da Consulta do Indice Constitucional de Educação.docx
Testes/: teste_consulta_flex.py  teste_consulta_flex_analise_erro.py  teste_varias_consultas_flex.py
Testes_Flex/: teste_consulta_flex_analise_erro.py
app_educacao/: README.md  __init__.py  apresentacao.py  config.py  dados.py  dash_indice.py  dash_projecao.py  extracao.py  flexvision_simples.py  graficos.py  memoria.py
consultas_base/: Relatório Limites Constitucionais - EDUCAÇÃO Parte 1_3 (2026)_1784297262899.csv  Relatório Limites Constitucionais - EDUCAÇÃO Parte 1_3 (2026)_Adaptada.csv  Relatório Limites Constitucionais - EDUCAÇÃO Parte 2_3 (2026) com FR 108 Adaptado_1784576848869.csv  Relatório Limites Constitucionais - EDUCAÇÃO Parte 2_3 (2026) com FR 108_1784297215351.csv  Relatório Limites Constitucionais - EDUCAÇÃO Parte 2_3 (Abr.2026)_ORIGINAL.csv
exemplos/: extrair_metricas_educacao.py
projeto_oficial_indice_educacao/: .env.exemplo  .gitignore  README.md  config.py  dados.py  dash_indice.py  dash_projecao.py  extracao.py  extracao_flex.py  requirements.txt
tests/: __init__.py  test_app_edu.py  (+9 more)
(+22 files in other folders)
