[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indices-constitucionais"
version = "0.1.0"
description = "Transformação das consultas Flexvision em métricas de índices constitucionais."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dashboard = [
    "pandas>=2,<4",
    "plotly>=6.3,<7",
    "streamlit>=1.59,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
